# mcpforge

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCS.md  Makefile  README.md  SECURITY.md  _autogen_mcp_server.py  debug.py  fix_tests.py  pyproject.toml  replace_ops.py  test_rbac.yml
.github/ISSUE_TEMPLATE/: bug_report.md  connector_request.md
.github/workflows/: publish.yml  tests.yml
docs/: airtable.md  excel.md  files.md  getting-started.md  google-sheets.md  hubspot.md  mongodb.md  mysql.md  notion.md  openapi.md  postgresql.md  redis.md  reference.md  semantic-search.md  sqlite.md  supabase.md
src/mcp_maker/: __init__.py  cli.py
src/mcp_maker/cli/: __init__.py  chat.py  connectors_loader.py  deploy.py  environment.py  generator.py  main.py  schema_ops.py  server.py
src/mcp_maker/connectors/: __init__.py  airtable.py  base.py  excel.py  files.py  gsheets.py  hubspot.py  mongodb.py  mysql.py  notion.py  openapi.py  postgres.py  redis.py  redis_connector.py  sqlite.py  supabase.py  utils.py
src/mcp_maker/core/: agent.py  generator.py  git_utils.py  schema.py
src/mcp_maker/templates/: _autogen.py.jinja2  server.py.jinja2
src/mcp_maker/templates/partials/: airtable.jinja2  excel.jinja2  export_tools.jinja2  files.jinja2  gsheets.jinja2  hubspot.jinja2  macros.jinja2  mongodb.jinja2  mysql.jinja2  mysql_async.jinja2  notion.jinja2  openapi.jinja2  postgres.jinja2  postgres_async.jinja2  redis.jinja2  semantic_search.jinja2  sqlite.jinja2  sqlite_async.jinja2  supabase.jinja2  system_tools.jinja2  webhook_tools.jinja2
src/mcpforge/: __init__.py  cli.py
src/mcpforge/connectors/: __init__.py  base.py  files.py  sqlite.py
src/mcpforge/core/: generator.py  schema.py
test_server/: .gitignore
test_server_otel/: main.py
tests/: conftest.py  test_mcpforge.py
tests/cli/: conftest.py  test_chat.py  test_config.py  test_deploy.py  test_env.py  test_env_edge_cases.py  test_env_extended.py  test_server.py
tests/connectors/: conftest.py  test_airtable.py  test_cloud_inspect.py  test_excel.py  test_files.py  test_gsheets.py  test_hubspot_mock.py  test_mongodb_mock.py  test_mysql.py  test_notion.py  test_openapi.py  test_postgres.py  test_redis_mock.py  test_sql_inspect.py  test_sqlite.py  test_supabase_mock.py
tests/core/: conftest.py  test_advanced_features.py  test_agent.py  test_auth_credentials.py  test_cloud_inspect.py  test_connection_lifecycle.py  test_connector_utils.py  test_generator.py  test_git_utils.py  test_query_safety.py  test_registry.py  test_schema.py  test_semantic.py  test_sql_inspect.py
tests/e2e/: conftest.py  test_generated_server.py
