[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcpforge"
version = "0.1.0"
description = "Auto-generate MCP servers from any data source. Zero code required."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Ali Hasan", email = "ali@example.com" },
]
keywords = ["mcp", "model-context-protocol", "ai", "llm", "claude", "server", "generator"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "jinja2>=3.1.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
postgres = ["psycopg2-binary>=2.9.0"]
mysql = ["pymysql>=1.1.0"]
airtable = ["pyairtable>=2.0.0"]
all = ["mcpforge[postgres,mysql,airtable]"]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0"]

[project.scripts]
mcpforge = "mcpforge.cli:app"

[project.urls]
Homepage = "https://github.com/MrAliHasan/mcpforge"
Documentation = "https://github.com/MrAliHasan/mcpforge#readme"
Repository = "https://github.com/MrAliHasan/mcpforge"
Issues = "https://github.com/MrAliHasan/mcpforge/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/mcpforge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
