[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-maker"
version = "0.2.1"
description = "Auto-generate MCP servers from any data source. Zero code required."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Ali Hassan", email = "mrali.hassan997@gmail.com" },
]
keywords = ["mcp", "model-context-protocol", "ai", "llm", "claude", "server", "generator"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "jinja2>=3.1.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
postgres = ["psycopg2-binary>=2.9.0"]
mysql = ["pymysql>=1.1.0"]
airtable = ["pyairtable>=2.0.0"]
gsheets = ["gspread>=6.0.0"]
notion = ["notion-client>=2.0.0"]
semantic = ["chromadb>=0.5.0"]
async-sqlite = ["aiosqlite>=0.20.0"]
async-postgres = ["asyncpg>=0.29.0"]
async-mysql = ["aiomysql>=0.2.0"]
all = ["mcp-maker[postgres,mysql,airtable,gsheets,notion,semantic,async-sqlite,async-postgres,async-mysql]"]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0"]

[project.scripts]
mcp-maker = "mcp_maker.cli:app"

[project.urls]
Homepage = "https://github.com/MrAliHasan/mcp-maker"
Documentation = "https://github.com/MrAliHasan/mcp-maker#readme"
Repository = "https://github.com/MrAliHasan/mcp-maker"
Issues = "https://github.com/MrAliHasan/mcp-maker/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_maker"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
